--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.app.base.basemvp.MainActivity">
+    android:fitsSystemWindows="false"
+    android:visibility="visible" tools:context="com.app.base.basemvp.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        />
+        android:text="@string/app_name"
+        android:textAppearance="@style/TextAppearance.AppCompat"/>
+    <android.support.design.widget.TextInputLayout
+        android:layout_marginTop="90dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:hint="hint" android:inputType="textPassword"/>
+    </android.support.design.widget.TextInputLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
